Sets, enumerate(), and range().

--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -34,7 +34,7 @@
     "Here is how to write a for-loop:\n",
     "\n",
     "```Python\n",
-    "for current_item in some_sequence:\n",
+    "for current_item in some_iterator:\n",
     "    # Type the code you want repeated here.\n",
     "    # Make sure the code is indented!\n",
     "    # You can have as many lines of code here as you want.\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -138,6 +138,9 @@
      "text": [
       "One cousin is 12 years old.\n",
       "They are younger than me.\n",
+      "\n",
+      "One cousin is 24 years old.\n",
+      "They are my age.\n",
       "\n",
       "One cousin is 15 years old.\n",
       "They are younger than me.\n",
@@ -153,7 +156,7 @@
    ],
    "source": [
     "# Create the collection we will loop through.\n",
-    "cousin_ages = [12, 15, 28, 39]\n",
+    "cousin_ages = [12, 24, 15, 28, 39]\n",
     "# Save my age in a variable so we can access it later in the code.\n",
     "my_age = 24\n",
     "\n",
@@ -166,6 +169,8 @@
     "    # Check whether they are younger or older and print the result.\n",
     "    if cousin_age < my_age:\n",
     "        print(\"They are younger than me.\")\n",
+    "    elif cousin_age == my_age:\n",
+    "        print(\"They are my age.\")\n",
     "    else:\n",
     "        print(\"They are older than me.\")\n",
     "    # Print an empty line to seperate each time the code loops.\n",
@@ -181,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -219,25 +224,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Iterating through a dict only loops through the keys. Luckily, we can access the values in a dictionary if we have the key. \n",
+    "Iterating through a dictionary only loops through the keys.\n",
     "\n",
-    "As a reminder, we can access the value at a given key in a dictionary using this syntax: `dict_name[key]`"
+    "<!-- We can access the value at each of these keys using the syntax `dict_name[key]`, like so:\n",
+    "\n",
+    "Luckily, we can access the values in a dictionary if we have the key. \n",
+    "\n",
+    "As a reminder, we can access the value at a given key in a dictionary using this syntax: `dict_name[key]` -->"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loop through a dictionary. Note how we only see the keys.\n",
+      "Loop through a dictionary. Note how we only see the keys:\n",
       "breakfast\n",
       "lunch\n",
       "dinner\n",
-      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "meals = {\"breakfast\": \"eggs\", \"lunch\": \"bagel\", \"dinner\": \"soup\"}\n",
+    "\n",
+    "print(\"Loop through a dictionary. Note how we only see the keys:\")\n",
+    "for meal_name in meals:\n",
+    "    print(meal_name)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we want to access the values within those keys, we must use the dictionary's syntax `dict_name[key]`, like so:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "This time, let's use each key to access the values.\n",
       "I'll eat eggs for breakfast.\n",
       "I'll eat bagel for lunch.\n",
@@ -246,18 +283,11 @@
     }
    ],
    "source": [
-    "meals = {\"breakfast\": \"eggs\", \"lunch\": \"bagel\", \"dinner\": \"soup\"}\n",
-    "\n",
-    "print(\"Loop through a dictionary. Note how we only see the keys.\")\n",
-    "for curr_meal in meals:\n",
-    "    print(curr_meal)\n",
-    "    \n",
-    "\n",
-    "print()\n",
     "print(\"This time, let's use each key to access the values.\")\n",
-    "for curr_meal in meals:\n",
+    "for meal_name in meals:\n",
+    "    curr_food = meals[meal_name]\n",
     "    # Use the key to access the value.\n",
-    "    print(f\"I'll eat { meals[curr_meal] } for {curr_meal}.\")"
+    "    print(f\"I'll eat {curr_food} for {meal_name}.\")"
    ]
   },
   {
@@ -269,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -299,12 +329,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the examples above, we always displayed the variables. However, this isn't a requirement, as shown below."
+    "While the above examples all displayed the variable's value, this only occured because we used the `print()` function on the variable. Without printing the variable, it will not get displayed. This can be seen in the example below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -312,27 +342,28 @@
      "output_type": "stream",
      "text": [
       "Hi!\n",
-      "Bye...\n",
+      "How are you?\n",
       "\n",
       "Hi!\n",
-      "Bye...\n",
+      "How are you?\n",
+      "\n",
+      "Go away...\n",
       "\n",
       "Hi!\n",
-      "Bye...\n",
-      "\n",
-      "Hi!\n",
-      "Bye...\n",
+      "How are you?\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Set the variable to each name in the list.\n",
+    "# Run the code block each time the variable changes to the next item in the list.\n",
     "for child in [\"Bob\", \"Sam\", \"Willy\", \"Todd\"]:\n",
-    "    # Run the code block each time the variable changes.\n",
-    "    # None of the lines print the child's name, so it will never get displayed.\n",
-    "    print(\"Hi!\")\n",
-    "    print(\"Bye...\")\n",
+    "    # Say hello to everyone except Willy.\n",
+    "    if child != \"Willy\":\n",
+    "        print(\"Hi!\")\n",
+    "        print(\"How are you?\")\n",
+    "    else:\n",
+    "        print(\"Go away...\")\n",
     "    print()"
    ]
   },
@@ -340,23 +371,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The code block above ran four times, since the variable got changed four times.\n",
-    "\n",
-    "When we just want a block of code to run a given number of times, we can use the `range()` function. The `range()` function returns a sequence that starts at 0 by default and stops before the number you pass it as an argument."
+    "### Range()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we just want a block of code to run a given number of times, we can use the `range()` function. The `range()` function generates a sequence of integers up to but not including a chosen endpoint. By default, the sequence will start with 0."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
+      "[0, 1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display a list of the numbers from 0 (inclusive) to 6 (exclusive).\n",
+    "print(list(range(6)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num is now 0.\n",
+      "That's a great number!\n",
+      "num is now 1.\n",
+      "That's a great number!\n",
+      "num is now 2.\n",
+      "That's a great number!\n",
+      "num is now 3.\n",
+      "That's a great number!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Make a code block run 4 times.\n",
+    "for num in range(4):\n",
+    "    print(f\"num is now {num}.\")\n",
+    "    print(\"That's a great number!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While both of those sequences started at 0, we can optionally start the sequence at a different number by passing the function two arguments instead of one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "3\n",
       "4\n",
       "5\n"
@@ -364,8 +449,8 @@
     }
    ],
    "source": [
-    "# Loop through numbers starting from 0 and ending before 6.\n",
-    "for num in range(6):\n",
+    "# Loop through numbers starting from 3 (inclusive) to 6 (exclusive).\n",
+    "for num in range(3, 6):\n",
     "    # Display each number in this range sequence.\n",
     "    print(num)"
    ]
@@ -374,9 +459,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `range` function is an easy way to make your loop run a specified number of times. Above, the loop ran 6 times because the argument was 6.\n",
+    "What if we want to change every element within a list? \n",
     "\n",
-    "You can optionally pick the starting number as well, like so:"
+    "One way we can do this is with the `range()` function, by treating the generated numbers as indices. To do this, we must get the length of the list in question so that we can make `range()` go from 0 (the first index) until `len(this_list)` (the index it must stop before reaching). Then we can alter the elements in those positions with the list-changing syntax `list_name[index] = new_value`.\n",
+    "<!-- \n",
+    "\n",
+    "make sure `range` stops generating once it reaches the largest index in the \n",
+    "\n",
+    "making it generate all numbers from 0 up until the final index in the list.\n",
+    "\n",
+    "treating the generated numbers as indices. \n",
+    "\n",
+    "\n",
+    "and altering the elements in those positions with the syntax `list_name[index] = new_value`. -->"
    ]
   },
   {
@@ -388,85 +483,172 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "4\n",
-      "5\n"
+      "Originally, index 0 is storing the name John.\n",
+      "Originally, index 1 is storing the name Tim.\n",
+      "Originally, index 2 is storing the name Phil.\n",
+      "Originally, index 3 is storing the name Harry.\n",
+      "Here is the new list:\n",
+      "['John Smith', 'Tim Smith', 'Phil Smith', 'Harry Smith']\n"
      ]
     }
    ],
    "source": [
-    "# Loop through numbers starting from 3 and ending before 6.\n",
-    "for num in range(3, 6):\n",
-    "    # Display each number in this range sequence.\n",
-    "    print(num)"
+    "siblings = [\"John\", \"Tim\", \"Phil\", \"Harry\"]\n",
+    "\n",
+    "# It is common to use the variable i for index.\n",
+    "for i in range(len(siblings)):\n",
+    "    # Get the name at index `i`.\n",
+    "    curr_name = siblings[i]\n",
+    "    # Display the current value at the index.\n",
+    "    print(f\"Originally, index {i} is storing the name {curr_name}.\")\n",
+    "    # Change the value at that index to also include the last name.\n",
+    "    siblings[i] = f\"{curr_name} Smith\"\n",
+    "\n",
+    "\n",
+    "print(\"Here is the new list:\")\n",
+    "print(siblings)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we've seen before, the first index in a list is 0, then 1, up until the final index, and we can change the elements in a list like so:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[18, 12, 6, 1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "random_nums = [6, 12, 6, 1]\n",
-    "\n",
-    "# Change the element at index 0 to 18.\n",
-    "random_nums[0] = 18\n",
-    "\n",
-    "print(random_nums)"
+    "This works, but it can be a bit confusing to look at. A better way to do this would be using a function called `enumerate()`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because of this, we can use `range()` to loop through all the indices in a list. This allows us to alter each element within the list."
+    "### Enumerate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `enumerate()` function pairs each element of an iterator with a number.\n",
+    "\n",
+    "<!-- creates tuples of every element within an iterator  -->"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[11, 17, 11, 6]\n"
+      "(0, 'H')\n",
+      "(1, 'e')\n",
+      "(2, 'l')\n",
+      "(3, 'l')\n",
+      "(4, 'o')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Enumerate the string iterator \"Hello\".\n",
+    "for pair in enumerate(\"Hello\"):\n",
+    "    print(pair)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Combined with tuple unpacking, we can put these values into variables to use them within the loop. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "blue is at index 0\n",
+      "red is at index 1\n",
+      "green is at index 2\n",
+      "yellow is at index 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "colors = [\"blue\", \"red\", \"green\", \"yellow\"]\n",
+    "\n",
+    "for i, color in enumerate(colors):\n",
+    "    print(f\"{color} is at index {i}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also use `enumerate()` to alter values in a list. You'll notice that the first example produces the same outcome as the previous example with `range()`, but is now much easier to follow.\n",
+    "\n",
+    "<!-- asimplify what we earlier used `range()` to accomplish. -->"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Originally, index 0 stored the name John.\n",
+      "Originally, index 1 stored the name Tim.\n",
+      "Originally, index 2 stored the name Phil.\n",
+      "Originally, index 3 stored the name Harry.\n",
+      "Here is the new list:\n",
+      "['John Smith', 'Tim Smith', 'Phil Smith', 'Harry Smith']\n"
+     ]
+    }
+   ],
+   "source": [
+    "siblings = [\"John\", \"Tim\", \"Phil\", \"Harry\"]\n",
+    "\n",
+    "# Alter \n",
+    "for i, curr_name in enumerate(siblings):\n",
+    "    print(f\"Originally, index {i} stored the name {curr_name}.\")\n",
+    "    siblings[i] = f\"{curr_name} Smith\"\n",
+    "    \n",
+    "print(\"Here is the new list:\")\n",
+    "print(siblings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list: [6, 12, 6, 1]\n",
+      "List after adding 5 to each element: [11, 17, 11, 6]\n"
      ]
     }
    ],
    "source": [
     "random_nums = [6, 12, 6, 1]\n",
-    "element_count = len(random_nums)\n",
     " \n",
-    "# Make the variable `i` go through each index in the list.\n",
-    "for i in range(element_count):\n",
-    "    # Add 5 to each element in the list.\n",
-    "    random_nums[i] = random_nums[i] + 5\n",
+    "print(f\"Original list: {random_nums}\")\n",
     "\n",
-    "print(random_nums)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note: In most cases, using a single letter as a variable is a bad idea, since it is confusing what the variable stands for. However, it is so common for coders to use `i` as a variable for index that it is fine to use it in this way, as everyone will know the `i` stands for \"index\"."
+    "# Make the variable `i` go through each index in the list.\n",
+    "for i, num in enumerate(random_nums):\n",
+    "    # Add 5 to each element in the list.\n",
+    "    random_nums[i] = num + 5\n",
+    "    \n",
+    "print(f\"List after adding 5 to each element: {random_nums}\")"
    ]
   },
   {
@@ -498,42 +680,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First, let's use a while-loop:\n",
-      "Hi\n",
-      "Bye\n",
-      "\n",
-      "Hi\n",
-      "Bye\n",
-      "\n",
-      "Hi\n",
-      "Bye\n",
-      "\n",
-      "Hi\n",
-      "Bye\n",
-      "\n",
-      "Now we will do the same with a for-loop:\n",
-      "Hi\n",
-      "Bye\n",
-      "\n",
-      "Hi\n",
-      "Bye\n",
-      "\n",
-      "Hi\n",
-      "Bye\n",
-      "\n",
-      "Hi\n",
-      "Bye\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"First, let's use a while-loop:\")\n",
     "num = 0\n",
@@ -563,27 +712,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter a non-zero number to add to the list. 1\n",
-      "Enter another number to add to the list or type 0 to stop. 42\n",
-      "Enter another number to add to the list or type 0 to stop. 5\n",
-      "Enter another number to add to the list or type 0 to stop. 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 42, 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_list = []\n",
     "num = int(input(\"Enter a non-zero number to add to the list.\"))\n",
@@ -611,17 +742,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['hi', 'bye', 12]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "random_elements = [\"hi\", \"bye\", 12, \"leo\", \"fly\", \"zoom\"]\n",
     "\n",
@@ -648,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
