--- a/Python Fundamentals.ipynb
+++ b/Python Fundamentals.ipynb
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "id": "40e3a319-c63e-42bb-9c3c-dd1f77dd8541",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "51a3ecbb-a710-41c2-9e26-0b0516dca5eb",
    "metadata": {},
    "outputs": [],
@@ -534,7 +534,7 @@
     " \n",
     "Examples of lists include `[1, 2, 3, 2]`, `[True, True, False]`, `[\"happy\", \"sad\", \"indifferent\"]`, and even the empty list `[]`. \n",
     "\n",
-    "Lists can even have lists inside of them! `[[1, 2, 3], [4. 5, 6]]` is a list where the first element is `[1, 2, 3]` and the second element is `[4, 5, 6]`."
+    "Lists can even have lists inside of them! `[[1, 2, 3], [4, 5, 6]]` is a list where the first element is `[1, 2, 3]` and the second element is `[4, 5, 6]`."
    ]
   },
   {
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "dd64ea76-a863-4551-91f0-7d1576c6dd8b",
    "metadata": {},
    "outputs": [
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "32f34d81-6fc8-4759-912c-e87c524052bf",
    "metadata": {},
    "outputs": [
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "1d151901-3e9b-4302-9340-18aef98f2751",
    "metadata": {},
    "outputs": [],
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "e94c8d65-443d-4b50-a39a-b0bec7580a4a",
    "metadata": {},
    "outputs": [
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "d96d875e-2023-45f9-bfa3-8c771cc4d52c",
    "metadata": {},
    "outputs": [
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "697d9571-1cf5-4e4a-8bea-2018c23d763a",
    "metadata": {},
    "outputs": [
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "26e0403f-db07-451e-964b-7db2f9d73db4",
    "metadata": {},
    "outputs": [
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "id": "b6d260cd-b2e1-4998-9967-d25ca1e1b0bb",
    "metadata": {},
    "outputs": [
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "id": "894aa7af-97c6-48f9-9493-3dc37d94ee4e",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1056,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
+   "id": "e7d21557-3fda-4523-b99a-d3ab9c917417",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num1 now points to 7 and num2 points to 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = 100\n",
+    "num2 = 7\n",
+    "\n",
+    "# First, this is how to swap everything without tuple unpacking:\n",
+    "temp = num1\n",
+    "num1 = num2\n",
+    "num2 = temp\n",
+    "print(f\"num1 now points to {num1} and num2 points to {num2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "32e8a2cf-f059-46e7-bd68-846992d908a8",
    "metadata": {},
    "outputs": [
@@ -1115,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "id": "1eec5187-8882-4b13-af30-4917a7bd1f88",
    "metadata": {},
    "outputs": [
@@ -1135,6 +1160,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e87599f0-6a0c-4846-bb71-ad1cd169c22f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apple', 'kiwi', 'pear', 'banana'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Selling fruit? Add them all to a set to find the unique products you have available.\n",
+    "fruits = {\"apple\", \"banana\", \"apple\", \"apple\", \"pear\", \"kiwi\", \"pear\"}\n",
+    "\n",
+    "print(fruits)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4e99439d-bec1-48ce-b7e2-362d3019e14c",
    "metadata": {},
@@ -1144,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "f0cc016a-ef1e-4a7c-aad9-5c14d0ea9b85",
    "metadata": {},
    "outputs": [
@@ -1153,31 +1199,40 @@
      "output_type": "stream",
      "text": [
       "The set originally looks like this:\n",
-      "{8, 1, 2, 3}\n",
+      "{'apple', 'kiwi', 'pear', 'banana'}\n",
       "\n",
-      "Let's add a 7 to the set.\n",
-      "{1, 2, 3, 7, 8}\n",
+      "We just got an orange to sell!\n",
+      "{'orange', 'apple', 'pear', 'banana', 'kiwi'}\n",
       "\n",
-      "Now let's remove the 2 from the set.\n",
-      "{1, 3, 7, 8}\n"
+      "And another pear!\n",
+      "{'orange', 'apple', 'pear', 'banana', 'kiwi'}\n",
+      "\n",
+      "If all the apples were sold, we can remove them from the set.\n",
+      "{'orange', 'pear', 'banana', 'kiwi'}\n"
      ]
     }
    ],
    "source": [
-    "example_set = {2, 1, 3, 8}\n",
+    "fruits = {\"apple\", \"banana\", \"apple\", \"apple\", \"pear\", \"kiwi\", \"pear\"}\n",
     "print(\"The set originally looks like this:\")\n",
-    "print(example_set)\n",
+    "print(fruits)\n",
     "print()\n",
     "\n",
     "\n",
-    "print(\"Let's add a 7 to the set.\")\n",
-    "example_set.add(7)\n",
-    "print(example_set)\n",
+    "print(\"We just got an orange to sell!\")\n",
+    "fruits.add(\"orange\")\n",
+    "print(fruits)\n",
     "print()\n",
     "\n",
-    "print(\"Now let's remove the 2 from the set.\")\n",
-    "example_set.remove(2)\n",
-    "print(example_set)"
+    "print(\"And another pear!\")\n",
+    "# Since we already had pears, this won't add it to the set again.\n",
+    "fruits.add(\"pear\")\n",
+    "print(fruits)\n",
+    "print()\n",
+    "\n",
+    "print(\"If all the apples were sold, we can remove them from the set.\")\n",
+    "fruits.remove(\"apple\")\n",
+    "print(fruits)"
    ]
   },
   {
@@ -1208,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "id": "7d296ec4-7b8b-4b08-bc58-ac24cac23df6",
    "metadata": {},
    "outputs": [
@@ -1222,7 +1277,8 @@
     }
    ],
    "source": [
-    "person_info = {\"name\": \"Sawyer\", \"age\": 24, \"favorite color\": \"black\"}\n",
+    "# Keys can't have duplicates, but values can.\n",
+    "person_info = {\"name\": \"Sawyer\", \"age\": 24, \"favorite color\": \"black\", \"legal name\":\"Sawyer\"}\n",
     "\n",
     "# Use a key to access the value it is paired with.\n",
     "print(person_info[\"favorite color\"])\n",
@@ -1234,12 +1290,12 @@
    "id": "55e52eb5-f5f5-4868-a99d-cde4a4c8225b",
    "metadata": {},
    "source": [
-    "Let's try using a dictionary to send a hidden message!"
+    "Let's try using a dictionary to uncover a secret message!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "ddf3011d-2aaa-48e6-a793-b97602a93a8a",
    "metadata": {},
    "outputs": [
@@ -1256,15 +1312,16 @@
     }
    ],
    "source": [
-    "# Create a dictionary where the keys are numbers and the values are the letters they secretly mean.\n",
-    "secret_message_dict = {18: \"o\", 1: \"H\", 22: \"r\", 5: \"l\", 23: \"e\", 42: \"x\"}\n",
-    "\n",
+    "# This is the secret message. Each number represents a letter in the message.\n",
     "hidden_message = [1, 23, 5, 5, 18]\n",
+    "\n",
+    "# Here is a dictionary of clues. Each key in this dictionary is a number, and the value is the secret letter the number corresponds to. \n",
+    "clues = {18: \"o\", 1: \"H\", 22: \"r\", 5: \"l\", 23: \"e\", 42: \"x\"}\n",
     "\n",
     "# loop through the hidden message, using the dictionary to find the letter each number turns into.\n",
     "for num in hidden_message:\n",
     "    # Display each hidden letter as we find them out.\n",
-    "    print(secret_message_dict[num])"
+    "    print(clues_dict[num])"
    ]
   },
   {
@@ -1277,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "id": "aa7e1075-d411-440e-bb2e-81f61188b197",
    "metadata": {},
    "outputs": [
@@ -1319,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "id": "06d19730-907b-44d4-a7e3-5c1b4b8cdbc0",
    "metadata": {},
    "outputs": [
@@ -1406,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 69,
    "id": "d1c6bf4c-2334-4ca3-b0b7-0803a416e1d5",
    "metadata": {},
    "outputs": [],
@@ -1452,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 73,
    "id": "2d231c9c-e81c-423e-af92-9a47b02967e3",
    "metadata": {},
    "outputs": [
@@ -1467,7 +1524,11 @@
       "False\n",
       "\n",
       "Is Gabe in the dictionary?\n",
-      "True\n"
+      "True\n",
+      "\n",
+      "The dictionary doesn't know what the values contain, so we can't check if a value is in the dict.\n",
+      "Is '(555) 892-8924' a key?\n",
+      "False\n"
      ]
     }
    ],
@@ -1483,7 +1544,12 @@
     "\n",
     "contacts = {\"Gabe\": \"(555) 892-8924\", \"James\": \"(363) 739-2803\", \"Charles\": \"(532) 238-3490\"}\n",
     "print(\"Is Gabe in the dictionary?\")\n",
-    "print(\"Gabe\" in contacts)"
+    "print(\"Gabe\" in contacts)\n",
+    "print()\n",
+    "\n",
+    "print(\"The dictionary doesn't know what the values contain, so we can't check if a value is in the dict.\")\n",
+    "print(\"Is '(555) 892-8924' a key?\")\n",
+    "print(\"(555) 892-8924\" in contacts)"
    ]
   },
   {
@@ -1496,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 74,
    "id": "cfc069d8-22da-4229-b864-328b942eac77",
    "metadata": {},
    "outputs": [
