Some minor updates.

--- a/Exercises.ipynb
+++ b/Exercises.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cf29820c-8057-4201-bd12-a7f17a22cf0b",
+   "metadata": {},
+   "source": [
+    "## Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2df19159-6b6f-4263-92c6-93207cfa71ca",
    "metadata": {},
    "source": [
@@ -485,6 +493,45 @@
     "\n",
     "# Example output 2:\n",
     "# add(9, 1) -> 10\n",
+    "\n",
+    "\n",
+    "# Your code here:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "255dcc30-eab3-4314-a874-f4d7d635590f",
+   "metadata": {},
+   "source": [
+    "## pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "def402ca-02a2-429a-9c9e-67bb0741bd4f",
+   "metadata": {},
+   "source": [
+    "1) Create a DataFrame from a dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a747c53-8e48-4ae6-aae0-59f23082ca15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1: Import pandas with the alias pd.\n",
+    "# Step 2: Create a dictionary with keys \"Name\", \"Age\", and \"State\" and corresponding lists as values.\n",
+    "# Step 3: Convert the dictionary into a DataFrame.\n",
+    "# Step 4: Print the DataFrame.\n",
+    "\n",
+    "# Example output 1:\n",
+    "#       Name  Age     State\n",
+    "# 0  Sawyer   24  New York\n",
+    "# 1    John   30   Florida\n",
+    "# 2   Alice   22  California\n",
     "\n",
     "\n",
     "# Your code here:\n",
