Updated exercises and added solutions.

--- a/Exercises.ipynb
+++ b/Exercises.ipynb
@@ -56,8 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 1: Create a variable called 'name' and assign your name to it.\n",
-    "# Step 2: Print the value of the variable 'name'.\n",
+    "# Step 1: Create a variable called `name` and assign your name to it.\n",
+    "# Step 2: Print the value of the variable `name`.\n",
     "\n",
     "# Example output 1:\n",
     "# Sawyer\n",
@@ -268,12 +268,12 @@
    "id": "cb718d45-145e-40e2-93be-a794bb999c8b",
    "metadata": {},
    "source": [
-    " 9) Write a Python program that takes a string and prints it in reverse. (I haven't taught this one yet. Try looking up how to reverse strings in Python. If you get stuck, I'll tell you the solution!)"
+    " 9) Write a Python program that takes a string and prints it in reverse."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "9b7c1a62-d4bc-4fac-b544-13a5f60e4208",
    "metadata": {},
    "outputs": [],
@@ -285,8 +285,7 @@
     "# nohtyP\n",
     "\n",
     "\n",
-    "# Your code here:\n",
-    "\n"
+    "# Your code here:\n"
    ]
   },
   {
@@ -299,10 +298,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "81528d11-c4fa-4b11-b90a-41478b99786f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Sawyer', 'Bill', 'Samantha', 'Tom']\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 1: Create a variable and assign it a string.\n",
     "# Step 2: Convert the string to uppercase using the upper() method.\n",
@@ -316,6 +323,7 @@
     "\n",
     "\n",
     "# Your code here:\n",
+    "\n",
     "\n"
    ]
   },
@@ -484,7 +492,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 1: Define a function called 'add' that takes two parameters.\n",
+    "# Step 1: Define a function called 'add' with two parameters.\n",
     "# Step 2: Inside the function, return the sum of the two parameters.\n",
     "# Step 3: Call the function with two numbers and print the result.\n",
     "\n",
